# SotwareEngineeringProject2025

./: .bash_history  .clang-tidy  .releaserc  CMakeLists.txt  Dockerfile  README.md  batch_script.bat  hello.cpp
.github/workflows/: CD.yml  CI.yml  cmake-multi-platform.yml  cmake-single-platform.yml
cmake/: HelloProjConfig.cmake.in
include/basic2/: building.h  dyn_array.h
mains/: CMakeLists.txt  hello.cpp  simtown.cpp
src/basic/: CMakeLists.txt  message.cpp
src/basic2/: CMakeLists.txt  building.cpp  rock.cpp
tests/: CMakeLists.txt  test-hello.cpp  test-version.cpp
